# meeg_decoding

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
examples/: bf_testing.ipynb  decoding.ipynb  latent.ipynb
private/: meg_helpers.py
src/decoding/: decode.py  prepare.py
src/latent/: embeddings.py  trajectories.py
src/meeg/: __init__.py
src/meeg/decoding/: __init__.py  decode.py  prepare.py
src/meeg/latent/: __init__.py  dsa.py  embeddings.py  trajectories.py
src/meeg/plots/: __init__.py  bfs.py  scores.py  trajectories.py
src/meeg/stats/: __init__.py  bfs.py
src/meg_decoding_tools/decoding/: decode.py
src/plots/: bfs.py
src/stats/: bfs.py
