[build-system]
requires = ["setuptools >= 65.5", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meg_decoding_tools"
version = "0.0.1"
authors = [{name="Ladislas Nalborczyk", email="ladislas.nalborczyk@gmail.com"},]
description = "Open source tools for MEG preprocessing, basic analyses, and multivariate pattern analyses (aka decoding), based on MNE-Python."
readme = "README.md"
keywords=["eeg, meg, mne, decoding",]
requires-python = ">=3.9"
license = {file = "LICENSE"}

# [tool.setuptools]
# platforms = ["any"]

# [tool.setuptools.packages]
# find = {} # scanning the project directory with the default parameters

# [tool.setuptools.package-dir]
# "" = "src"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false # true by default

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3"
]

dependencies = [
  "numpy>=1.21.2",
  "matplotlib>=3.5.0",
  "mne",
  "scipy>=1.7.1",
  "scikit-learn"
]

[project.urls]
Homepage = "https://github.com/lnalborczyk/meg_decoding_tools"
Repository = "https://github.com/lnalborczyk/meg_decoding_tools"
Issues = "https://github.com/lnalborczyk/meg_decoding_tools/issues"