[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meg_decoding_tools"
version = "0.0.1"
authors = [{name="Ladislas Nalborczyk", email="ladislas.nalborczyk@gmail.com"},]
description = "Open source tools for M/EEG multivariate pattern analyses (aka decoding) and state-space analyses, based on MNE-Python."
readme = "README.md"
keywords=["eeg, meg, mne, decoding",]
requires-python = ">=3.9"
license = {file = "LICENSE"}

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3"
]

dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "mne",
  "scipy>=1.9.3",
  "scikit-learn",
  "pandas",
  "seaborn",
  "adjustText"
]

[project.urls]
Homepage = "https://github.com/lnalborczyk/meg_decoding_tools"
Repository = "https://github.com/lnalborczyk/meg_decoding_tools"
Issues = "https://github.com/lnalborczyk/meg_decoding_tools/issues"
