[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meeg_decoding"
version = "0.0.1"
authors = [{name="Ladislas Nalborczyk", email="ladislas.nalborczyk@gmail.com"},]
description = "Open source tools for M/EEG multivariate pattern analyses (aka decoding) and state-space analyses, based on MNE-Python."
readme = "README.md"
keywords=["eeg, meg, mne, decoding",]
requires-python = ">=3.9"
license = {file = "LICENSE"}

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3"
]

dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "mne",
  "scipy>=1.9.3",
  "scikit-learn",
  "pandas",
  "seaborn",
  "adjustText"
]

[project.urls]
Homepage = "https://github.com/lnalborczyk/meeg_decoding"
Repository = "https://github.com/lnalborczyk/meeg_decoding"
Issues = "https://github.com/lnalborczyk/meeg_decoding/issues"
